<resources>
    <!--General-->
    <string name="app_name">Mentoring</string>
    <string name="tagline">Pendidikan teknologi untuk semua.</string>

    <string name="submit">Kirim</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="tvEmail">Email</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="tvFullname">Full Name</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="general_error_message">Ups! Terjadi kesalahan.\nMohon coba lagi nanti.</string>

    <!--Auth-->
    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <string name="logout">Keluar</string>
    <string name="account_not_yet">Belum punya akun?</string>
    <string name="account_already">Sudah punya akun?</string>

    <!--Auth Errors-->
    <string name="login_failed">Login gagal</string>
    <string name="register_failed">Register gagal</string>
    <string name="email_error">Format email tidak sesuai</string>
    <string name="password_error">Password minimal 6 karakter</string>

    <!--Auth Roles-->
    <string name="register_as_mentor">Daftar sebagai Mentor?</string>
    <string name="register_mentor">Daftar sebagai Mentor</string>
    <string name="register_as_mentee">Daftar sebagai mentee?</string>
    <string name="register_mentee">Daftar sebagai Mentee</string>

    <!--Profile Page-->
    <string name="tvMenteeName">Mentee name</string>
    <string name="tvRole">Role</string>
    <string name="tvUsername">Username</string>
    <string name="hintFullname">Insert your name</string>
    <string name="tvGender">Jenis Kelamin</string>
    <string name="tvInterest">Interest</string>
    <string name="tvBiography">Tentang Anda</string>
    <string name="btnSave">Simpan</string>
    <string name="insert_fullname_null">Masukkan nama Anda</string>
    <string name="phone_number_null">Anda belum mengisi nomor telepon</string>
    <string name="gender_null">Anda belum mengisi jenis kelamin</string>
    <string name="biography_null">Anda belum mengisi tentang Anda</string>
    <string name="edit_text_phone">Nomor Telepon</string>
    <string name="edit_profile_button">Ubah Data Profile</string>
    <string name="edit_interest_button">Ubah Bidang Anda</string>
    <string name="edit_days">Ubah Hari</string>
    <string name="change_image">Pilih Gambar</string>
    <string name="radio_mentee">Mentee</string>
    <string name="radio_mentor">Mentor</string>
    <string name="hint_email">Masukkan Email</string>
    <string name="hint_biography">Ceritakan tentang Anda</string>
    <string name="radio_male">Laki-laki</string>
    <string name="role_null">Anda belum mengisi data jenis kelamin</string>
    <string name="radio_female">Perempuan</string>

    <!--Interest & Days-->
    <string name="intro_select_days_interest">Silahkan pilih hari Anda</string>
    <string name="intro_interest">Pilih bidang ketertarikan Anda</string>

    <!--Feedback Page-->
    <string name="feedback_prompt">Bagaimana pengalaman mentoring Anda bersama Mentor?</string>
    <string name="feedback_hint">Berikan feedback Anda untuk mentor…</string>
    <string name="rating_bar">Bintang</string>
    <string name="feedback_failed">Memberikan feedback gagal</string>

    <!--Bottom Navigation-->
    <string name="title_message">Message</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_home">Home</string>
    <string name="menu">Menu</string>

    <!--Chat-->
    <string name="say_something">Katakan sesuatu…</string>
    <string name="get_schedule_failed">Get schedule failed</string>
    <string name="chat_rate_mentor">Beri nilai mentor</string>
    <string name="chat_open_schedule">Klik untuk membuka Jadwal</string>
    <string name="session_scheduled">Sesi terjadwal!</string>
    <string name="chat_rate_given">Feedback sudah diberikan</string>

    <!--Home-->
    <string name="home_intro_mentee">Siap untuk mempelajari sesuatu yang baru?</string>
    <string name="home_intro_mentor">Siap untuk berbagi ilmu?</string>
    <string name="interests_label">Bidang ketertarikan:</string>
    <string name="days_label">Hari tersedia:</string>

    <!--Days-->
    <string name="choose_days">Pilih Hari</string>
    <string name="monday">Senin</string>
    <string name="tuesday">Selasa</string>
    <string name="wednesday">Rabu</string>
    <string name="thursday">Kamis</string>
    <string name="friday">Jumat</string>
    <string name="saturday">Sabtu</string>
    <string name="sunday">Minggu</string>

    <!--Home Mentor-->
    <string name="rating_value">%1$s/5</string>
    <string name="sentiment_value">%1$s%%</string>
    <string name="info_individual_feedback">Lihat ulasan individu dari para menteemu di sini</string>

    <!-- Profile Menu -->
    <string name="menu_profile">Profil Anda</string>
    <string name="menu_interest">Pilih Ketertarikan Topik</string>
    <string name="menu_days">Pilih Hari Mentoring</string>

    <string name="average_rating">Rata-rata Penilaian</string>
    <string name="feedback_summary">Rangkuman Ulasan</string>
    <string name="individual_review">Ulasan Individu</string>
    <string name="feedback_summary_mentee">Rangkuman Ulasan Mentee</string>

    <string name="mentoring_time_unchosen">Anda belum mengisi waktu mentoring</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="logout_confirmation">Apakah Anda yakin ingin logout?</string>
    <string name="profile_update_failed">Pengubahan profil gagal</string>
</resources>