<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="5dp"
    android:orientation="vertical"
    tools:context=".ui.profile.ListDayActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Headline"
        android:text="@string/intro_select_days_interest"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        />

    <CheckBox
        android:layout_marginTop="10dp"
        android:id="@+id/checkbox_monday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/monday"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/checkbox_tuesday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/tuesday" />

    <CheckBox
        android:id="@+id/checkbox_wednesday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/wednesday"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/checkbox_thursday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/thursday"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/checkbox_friday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/friday"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/checkbox_saturday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/saturday"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/checkbox_sunday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/sunday"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/primary"
        android:fontFamily="@font/quicksand_semibold"
        android:text="@string/btnSave" />
</LinearLayout>